update mentor id function
